fixed positioning on notepad & hidden the scrollbar

--- a/style.css
+++ b/style.css
@@ -24,11 +24,16 @@ img {
 
   textarea {
 	width: 25%;
-	height: 100%;
+	height: 33%;
 	background: none;
+	scrollbar-width: none;
 	color: rgb(102, 102, 102);
 	font-size: 1em;
 	position: absolute;
+	margin-left: 2%;
+	margin-right: 10%;
+	margin-top: 15%;
+	overflow: auto;
 	padding: 1em;
 	border: 0;
 	resize: none;
@@ -166,7 +171,7 @@ li {
   animation: blink-animation 1s steps (10, start) infinite; 
 }
 
-  ::-moz-placeholder { color:rgb(49, 49, 49);
+  ::-moz-placeholder { color:rgb(78, 78, 78);
  }
 
 .search {
